# RideLink

./: Need.md  ReadMe.md  RideLink.code-workspace  docker-compose.yaml  dockerfile  pyproject.toml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
api/: config.py  database.py  dependencies.py  main.py
api/cruds/: UserCRUD.py
api/models/: models.py
api/routers/: Matching.py  Matiching.py  RouteGenerate.py  User.py  Websocket.py
api/schemas/: matchs.py  users.py
api/services/: MatchingService.py  RouteGenerateService.py  RouteGenerate_Service.py  UserService.py
backend/api/: Dockerfile  config.py  database.py  dependencies.py  main.py  pyproject.toml
backend/api/cruds/: MatchCRUD.py  UserCRUD.py
backend/api/dto/: MatchDTO.py
backend/api/models/: models.py
backend/api/routers/: Matched.py  Matching.py  RouteGenerate.py  User.py  Websocket.py
backend/api/schemas/: matchs.py  routes.py
backend/api/services/: ConnectionManager.py  Enums.py  MatchedService.py  MatchingService.py  RouteGenerateService.py  UserService.py
frontend/: .dockerignore
frontend/my-app/: .dockerignore  Dockerfile  dockerfile  package.json
frontend/my-app/src/app/: layout.tsx
frontend/my-app/src/components/: LobbyApprove.tsx  LobbyView.tsx  LoginForm.tsx  MapSection.tsx  MatchNavigation.tsx  RegisterForm.tsx  RouteMap.tsx  Sidebar.tsx
frontend/my-app/src/contexts/: WebSocketContext.tsx
frontend/my-vite-app/: .dockerignore  Dockerfile  package.json
frontend/my-vite-app/src/: App.tsx  main.tsx
(+32 files in other folders)
